--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">GameVelha</string>
-    <string name="turno">Vez do Jogador do Flamengo</string>
-    <string name="vencedor">Ninguém ganhou ainda!</string>string>
+    <string name="app_name">GameJogoDaVelha</string>
+    <string name="player1_hint">Jogador 1</string>
+    <string name="player2_hint">Jogador 2</string>
+    <string name="game_dialog_title">Novo jogo</string>
+    <string name="done">OK</string>
+    <string name="game_dialog_empty_name">Name mustn\'t be empty</string>
+    <string name="game_dialog_same_names">Names mustn\'t be the same</string>
+    <string name="game_end_dialog_headline">O vencedor é </string>
 </resources>
